<resources>
    <string name="app_name">Media Player</string>

    <string name="about">About author</string>
    <string name="version">Version: %1$s</string>
    <string name="titleMovie">Media Player</string>
    <string name="image">playerImage</string>
    <string name="author">Author:</string>
    <string name="authorName">Michał Gałecki</string>
    <string name="text2017">2017</string>

    <string name="title">title</string>
    <string name="description">description</string>
    <string name="example_title">title</string>
    <string name="example_album">album</string>
    <string name="_00_00">00:00</string>
    <string name="_05_15">99:99</string>
    <string name="example_artist">artist</string>
    <string name="album_cover">album</string>
    <string name="play_button">play</string>
    <string name="stop_button">stop</string>
    <string name="forward_button">forward</string>
    <string name="backward_button">backward</string>
    <string name="could_not_load_file">could not load file</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause"><![CDATA[||]]></string>
    <string name="play"><![CDATA[|>]]></string>
    <string name="next_song"><![CDATA[>]]></string>
</resources>
